# MacroPad

./: .gitignore  CMakeLists.txt  README.md
electronics/Driver Circuit/: #auto_saved_files#  Driver Circuit.kicad_prl  Driver Circuit.kicad_pro  Driver Circuit.kicad_sch  ~Driver Circuit.kicad_sch.lck
electronics/INOs/4Button1Display/: 4Button1Display.ino
electronics/INOs/MacroKeyWorkshop/: MacroKeyWorkshop.ino
electronics/INOs/MacroPad/: MacroPad.ino
electronics/INOs/MacroPadDisplays/: MacroPadDisplays.ino  images.h
electronics/INOs/MacroPadDisplaysVolumeSPEndBeta/: MacroPadDisplaysVolumeSPEndBeta.ino  images.h
electronics/INOs/MacroWTransfer/: MacroWTransfer.ino
electronics/INOs/PadLittleFS/: PadLittleFS.ino
electronics/INOs/SerialTestWithDisplay/: SerialTestWithDisplay.ino
electronics/INOs/SerialTestWithDisplayAndVolume/: SerialTestWithDisplayAndVolume.ino  images.hpp
electronics/INOs/VolumeControl/: VolumeControl.ino
electronics/INOs/libraries/Adafruit_SSD1305/: Adafruit_SSD1305.cpp  Adafruit_SSD1305.h  README.md
electronics/INOs/libraries/SoftWire/: README.md  library.json  library.properties
electronics/INOs/libraries/SoftWire/src/: SoftWire.h
electronics/INOs/libraries/TFT_eSPI/: .gitignore  Kconfig  TFT_config.h  TFT_eSPI.cpp  User_Setup.h  User_Setup_Select.h
electronics/INOs/libraries/TFT_eSPI/TFT_Drivers/: SSD1357_Defines.h  SSD1357_Init.h  SSD1357_Rotation.h
electronics/INOs/libraries/TFT_eSPI/User_Setups/: Setup139_SSD1357_64.h
electronics/INOs/transferbrainstorm/: images.h  transferbrainstorm.ino
electronics/KeyWorkshop/: KeyWorkshop.kicad_prl  KeyWorkshop.kicad_pro  KeyWorkshop.kicad_sch
electronics/KeyWorkshop/KeyWorkshopTemp/: KeyWorkshopTemp.kicad_pcb  KeyWorkshopTemp.kicad_prl  KeyWorkshopTemp.kicad_pro  KeyWorkshopTemp.kicad_sch  KeyWorkshopTemp.kicad_sch-bak  fp-info-cache
electronics/KeyWorkshop/KeyWorkshopTemp/production/: bom.csv  designators.csv  positions.csv
electronics/MacroPad SP25 End/: #auto_saved_files#  MacroPad SP25 End--Long.kicad_pcb  MacroPad SP25 End--Long.kicad_pro  MacroPad SP25 End.kicad_pcb  MacroPad SP25 End.kicad_prl  MacroPad SP25 End.kicad_pro  MacroPad SP25 End.kicad_sch  _autosave-MacroPad SP25 End.kicad_sch  fp-info-cache  ~MacroPad SP25 End.kicad_pcb.lck  ~MacroPad SP25 End.kicad_sch.lck
electronics/MacroPad SP25 End/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
electronics/MacroPad v1/: MacroPad v1.kicad_pcb  MacroPad v1.kicad_prl  MacroPad v1.kicad_sch
electronics/MacroPad v1 - no Displays/: MacroPad v1.kicad_pcb  MacroPad v1.kicad_prl  MacroPad v1.kicad_pro  MacroPad v1.kicad_sch
electronics/ScottoKicad/3dmodels/ScottoKeebs_Components.3dshapes/: SW-TH_K3-1204D-L.step
software/: CMakeLists.txt  Info.plist  KeyConfig.qml  MPIcon.icns  Macropad_icon.icns  Main.qml  ProfileManager.qml  apptracker.cpp  apptracker.h  apptracker.mm  brightness  config.cpp  config.h  fileio.cpp  fileio.h  hotkeyhandler.cpp  hotkeyhandler.h  iconextractor.cpp  iconextractor.h  iconextractor.mm  imagecache.cpp  imagecache.h  keystrokerecorder.cpp  keystrokerecorder.h  knobhandler.cpp  knobhandler.h  macro.cpp  macro.h  main.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h  serialhandler.cpp  serialhandler.h
